bk_ida/gccida/c0/estimate_probability
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:813:14: error: expected identifier or '('
 struct loop = &loops_infoa->array[i]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:826:40: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
predict_edge_def( e, PRED_LOOP_BRANCH, TAKEN_0); 
                                       ^~~~~~~
                                       TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:836:44: error: use of undeclared identifier 'predictor_info_0'; did you mean 'predictor_info'?
predict_edge( e, PRED_LOOP_EXIT, ( 10000 - predictor_info_0[9].hitrate) / exits); 
                                           ^~~~~~~~~~~~~~~~
                                           predictor_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:86:36: note: 'predictor_info' declared here
static const struct predictor_info predictor_info[]= {
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:859:39: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_edge_def( e_0, PRED_NORETURN, NOT_TAKEN_0); 
                                      ^~~~~~~~~~~
                                      NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:872:44: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_edge_def( e_0a, PRED_ERROR_RETURN, NOT_TAKEN_0); 
                                           ^~~~~~~~~~~
                                           NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:883:36: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_edge_def( e_0a, PRED_CALL, NOT_TAKEN_0); 
                                   ^~~~~~~~~~~
                                   NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:898:44: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_insn_def( last_insn, PRED_POINTER, NOT_TAKEN_0); 
                                           ^~~~~~~~~~~
                                           NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:902:44: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
predict_insn_def( last_insn, PRED_POINTER, TAKEN_0); 
                                           ^~~~~~~
                                           TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:910:52: error: use of undeclared identifier 'prediction'; did you mean 'predict_insn'?
predict_insn_def( last_insn, PRED_UNCONDITIONAL, ( prediction)( cond != const_int_rtx[64])); 
                                                   ^~~~~~~~~~
                                                   predict_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:95:1: note: 'predict_insn' declared here
predict_insn (insn, predictor, probability)
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:910:50: error: passing 'void' to parameter of incompatible type 'unsigned int'
predict_insn_def( last_insn, PRED_UNCONDITIONAL, ( prediction)( cond != const_int_rtx[64])); 
                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:914:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cond->fld[0].rtwint)] != MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:915:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cond->fld[0].rtwint)] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:916:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cond->fld[0].rtwint)] != MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:917:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)cond[1] != const_int_rtx[64] 
         ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:920:52: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
predict_insn_def( last_insn, PRED_OPCODE_NONEQUAL, TAKEN_0); 
                                                   ^~~~~~~
                                                   TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:925:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cond->fld[0].rtwint)] != MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:926:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cond->fld[0].rtwint)] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:927:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cond->fld[0].rtwint)] != MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/predict.c:928:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)cond[1] != const_int_rtx[64] 
         ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/estimate_probability/src/obj/predict.o] Error 1
